--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			<span class="space"/><span class="comments">*2022—11-03</span><br />
 			<!--<span class="space"/><span class="comments">*2018-12-31.</span><br /> -->
 			<span class="space"/><span class="comments">*/</span><br />
-			Boy name = <span class="keyword">Mr</span> Raghava<br />
-			Girl name = <span class="keyword">Mrs</span> Kutty<br />
+			Boy name = <span class="keyword">Mr</span> emulator<br />
+			Girl name = <span class="keyword">Mrs</span> Mouni<br />
 			<span class="comments">// Fall in love river. </span><br />
 			The boy love the girl;<br />
 			<span class="comments">// They love each other.</span><br />
