--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">/*</span><br />
-			<span class="space"/><span class="comments">*2022—11-03</span><br />
+			<span class="space"/><span class="comments">*2023—12-014</span><br />
 			<!--<span class="space"/><span class="comments">*2018-12-31.</span><br /> -->
 			<span class="space"/><span class="comments">*/</span><br />
 			Boy name = <span class="keyword">Mr</span> emulator<br />
 			Girl name = <span class="keyword">Mrs</span> Mouni<br />
-			<span class="comments">// Fall in love river. </span><br />
-			The boy love the girl;<br />
+			<span class="comments">// Fall in love with you. </span><br />
+			The boy wants her;<br />
 			<span class="comments">// They love each other.</span><br />
-			The girl loved the boy;<br />
+			The girl wants him;<br />
 			<span class="comments">// AS time goes on.</span><br />
 			The boy can not be separated the girl;<br />
 			<span class="comments">// At the same time.</span><br />
